--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
     text-align: center;
-    color: #ffc600;
+    color: #fff;
     font-size: 4.2rem;
 }
 
@@ -21,14 +21,14 @@ h1 {
 
 .footer-box a {
     text-decoration: none;
-    color: green;
+    color: #fff;
 }
 
 .footer-section {
     position: fixed;
     bottom: 0;
     width: 100%;
-    color: #ffc600;
+    color: #fff;
 }
 
 .footer-container {
