--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,34 @@ h1 {
     margin-right: auto;  
 }
 
+.clock {
+    width: 300px;
+    height: 300px;
+    border: 30px solid #fff;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2rem;
+}
+
+.clock-face {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.hand {
+    width: 50%;
+    height: 7px;
+    background-color: #000;
+    position: absolute;
+    top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.06s;
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
 .footer-box p {
     text-align: center;
 }
